--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
         <a class="navbar-brand p-0" href="#"
-          ><img src="logo.png" alt="logo" width="60"
+          ><img src="Xellor.gif" alt="logo" width="60"
         /></a>
         <button
           class="navbar-toggler"
