--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
+    <meta name="google-site-verification" content="KzMdJWtm1pvivpNybXeJOBBxtiOjWGjAJytCwO82vT8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danylo Bilyk - Python Developer Portfolio</title>
@@ -311,4 +312,5 @@
     </script>
 </body>
 </html>
+
 
