--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-    <meta name="google-site-verification" content="KzMdJWtm1pvivpNybXeJOBBxtiOjWGjAJytCwO82vT8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- SEO Meta Tags -->
     <title>Danylo Bilyk - Python Developer Portfolio</title>
+    <meta name="description" content="Портфолио Данила Билыка (Danylo Bilyk), Python Backend разработчика. Демонстрация технических навыков, проектов и профессиональных целей.">
+    <meta name="author" content="Danylo Bilyk">
+    <meta name="keywords" content="Danylo Bilyk, Xellor, Python Developer, Backend Developer, Portfolio, Django, REST API, Selenium, Python, Данило Бiлик, Данил Билык">
+
+    <!-- Open Graph / Facebook / Telegram -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://xellor-dev.github.io/portfolio/"> <!-- TODO: Замените на ваш реальный домен -->
+    <meta property="og:title" content="Danylo Bilyk - Python Developer Portfolio">
+    <meta property="og:description" content="Портфолио Данила Билыка (Danylo Bilyk), Python Backend разработчика. Демонстрация технических навыков, проектов и профессиональных целей.">
+    <meta property="og:image" content="https://media.licdn.com/dms/image/v2/D5635AQEGYimu9Cn9aw/profile-framedphoto-shrink_200_200/profile-framedphoto-shrink_200_200/0/1735768419034?e=1760828400&v=beta&t=bWQ1s0RGOqPgAFzJksbEpur5uMxe6YVWCb8yR8iAmrQ">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -227,7 +239,7 @@
         </section>
 
         <footer class="max-w-4xl mx-auto pt-6 border-t border-gray-800 text-center text-gray-500 text-sm">
-            <p>© 2025 Danylo Bilyk. Built with Python Backend Logic and Tailwind CSS.</p>
+            <p id="footer-text">© 2025 Danylo Bilyk. Built with Python Backend Logic and Tailwind CSS.</p>
         </footer>
 
     </div>
@@ -251,6 +263,7 @@
             { id: 'section-projects', key: 'section_projects' },
             { id: 'project-placeholder-title', key: 'project_placeholder_title' },
             { id: 'project-placeholder-desc', key: 'project_placeholder_desc' },
+            // { id: 'footer-text', key: 'footer_text' }, // Футер пока не переводим
         ];
 
         function setLanguage(lang) {
@@ -312,5 +325,3 @@
     </script>
 </body>
 </html>
-
-
